reverted due to overflow issues

--- a/app/art/CharacterDesigner.css
+++ b/app/art/CharacterDesigner.css
@@ -1,18 +1,5 @@
 @import "tailwindcss";
 
-/* .intro-layout{
-    display: flex;
-    padding: min(4em, 8%);
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-}
-
-.intro-content{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-} */
-
 .intro-layout {
     display: grid;
     grid-template-columns: repeat(5, 1fr) / repeat(6, 1fr);
